Fixes UI bug - ECO-0001 -> Add event for X icon on Modal - ECO-0002 -> Remove re-confirm when using have posted - ECO-0003 -> Set primary button text color to white - ECO-0004 -> Set max length for caption is 2200 and wrap text in preview screen

--- a/src/Components/Button/Button.scss
+++ b/src/Components/Button/Button.scss
@@ -71,10 +71,14 @@
 }
 
 .primary {
+  color: white;
   background-color: var(--pill-color);
+  border: 1px solid var(--pill-color) !important;
 
   &:hover {
+    color: var(--primary-text-color);
     background-color: var(--primary-hover-color);
+
   }
 }
 
@@ -89,7 +93,6 @@
     background-color: transparent;
     opacity: 0.7;
     cursor: not-allowed;
-    scale: 1;
   }
 }
 
